# -*- python -*-

load(
    "//tools:drake.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = [":__subpackages__"],
)

drake_cc_library(
    name = "allegro_common",
    srcs = ["allegro_common.cc"],
    hdrs = ["allegro_common.h"],
    deps = [
        "//multibody:inverse_kinematics",
        "//multibody/parsers",
    ],
)


drake_cc_binary(
    name = "run_allegro_constant_load_demo",
    srcs = ["run_allegro_constant_load_demo.cc"],
    data = [
        "//manipulation/models/allegro_hand_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//lcm",
        "//lcmtypes:viewer",
        "//geometry:geometry_visualization",
        "//multibody/multibody_tree/multibody_plant",
        "//multibody/multibody_tree/multibody_plant:contact_results_to_lcm",
        "//multibody/multibody_tree/parsing:multibody_plant_sdf_parser",
        "//systems/analysis",
        "//systems/primitives:constant_vector_source",
        "//systems/rendering:pose_bundle_to_draw_message",
        "//systems/lcm:lcm_pubsub_system",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_allegro_close_hand",
    srcs = ["run_allegro_close_hand.cc"],
    data = [
        "//manipulation/models/allegro_hand_description:models",
    ],
    deps = [
        ":allegro_common",
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//lcm",
        "//geometry:geometry_visualization",
        "//multibody/multibody_tree/multibody_plant",
        "//multibody/multibody_tree/multibody_plant:contact_results_to_lcm",
        "//multibody/multibody_tree/parsing:multibody_plant_sdf_parser",
        "//systems/analysis",
        "//systems/controllers:inverse_dynamics_controller",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:signal_logger",
        "//systems/rendering:pose_bundle_to_draw_message",
        "//systems/lcm:lcm_pubsub_system",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "test_allegro_actuation",
    srcs = ["test_allegro_actuation.cc"],
    data = [
        "//manipulation/models/allegro_hand_description:models",
    ],
    deps = [
        ":allegro_common",
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//lcm",
        "//geometry:geometry_visualization",
        "//multibody/multibody_tree/multibody_plant",
        "//multibody/multibody_tree/multibody_plant:contact_results_to_lcm",
        "//multibody/multibody_tree/parsing:multibody_plant_sdf_parser",
        "//systems/analysis",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:signal_logger",
        "//systems/rendering:pose_bundle_to_draw_message",
        "//systems/lcm:lcm_pubsub_system",
        "@gflags",
    ],
)
