load(
    "//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:private"])

drake_cc_package_library(
    name = "diffobj",
    visibility = ["//visibility:private"],
    deps = [
        ":diff_obj_core",
    ],
)

drake_cc_library(
    name = "diff_obj_core",
    srcs = [
        "diff_matrix3.cc",
    ],
    hdrs = [
        "dense_derivatives.h",
        "derivatives_base.h",
        "diff_object.h",
        "diff_matrix3.h",
    ],
    deps = [
        "//common:essential",
        "//common:unused",
    ],
)

add_lint_tests()
