load(
    "//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:private"])

drake_cc_package_library(
    name = "diffobj",
    visibility = ["//visibility:private"],
    deps = [
        ":diff_obj_core",
    ],
)

drake_cc_library(
    name = "diff_obj_core",
    srcs = [
        "diff_matrix3.cc",
    ],    
    clang_copts = ["-Wno-unused-local-typedef"],
    hdrs = [
        "dense_derivatives.h",
        "optional_derivatives.h",
        "derivatives_base.h",
        "diff_object.h",
        "diff_matrix3.h",
    ],
    deps = [
        "//common:essential",
        "//common:unused",
        "//math:autodiff",
        "//math:gradient",
    ],
)

drake_cc_googletest(
    name = "diff_matrix3_test",
    # The clang compiler complains about unused typedefs (using statements
    # really) in MultiplyOperation. Reported bugs with ids 24883 and 33298 at
    # https://bugs.llvm.org/
    clang_copts = ["-Wno-unused-local-typedef"],
    deps = [
        ":diffobj",
        "//common/test_utilities",
        "//math:autodiff",
        "//math:gradient",
    ],
)

add_lint_tests()
