load(
    "//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:private"])

drake_cc_package_library(
    name = "diffobj",
    visibility = ["//visibility:private"],
    deps = [
        ":derivatives",
        ":diff_object",
        ":diff_matrix3",
    ],
)

drake_cc_library(
    name = "derivatives",
    srcs = [],    
    hdrs = [
        "dense_derivatives.h",
        "optional_derivatives.h",
        "derivatives_base.h",
    ],
    deps = [
        "//common:essential",
        "//common:unused",
        "//math:autodiff",
        "//math:gradient",
    ],
)

drake_cc_library(
    name = "diff_object",
    srcs = [],
    hdrs = [
        "diff_object.h",
    ],
    deps = [
        ":derivatives",
        "//common:essential",
        "//common:unused",
        "//math:autodiff",
        "//math:gradient",
    ],
)

drake_cc_library(
    name = "diff_matrix3",
    # The clang compiler complains about unused typedefs (using statements
    # really) in MultiplyOperation. Reported bugs with ids 24883 and 33298 at
    # https://bugs.llvm.org/
    clang_copts = ["-Wno-unused-local-typedef"],
    srcs = [
        "diff_matrix3.cc",
    ],
    hdrs = [
        "diff_matrix3.h",
    ],
    deps = [
        ":derivatives",
        ":diff_object",
        "//common:essential",
        "//common:unused",
        "//math:autodiff",
        "//math:gradient",
    ],
)

drake_cc_library(
    name = "diff_rotation_matrix",
    # The clang compiler complains about unused typedefs (using statements
    # really) in MultiplyOperation. Reported bugs with ids 24883 and 33298 at
    # https://bugs.llvm.org/
    clang_copts = ["-Wno-unused-local-typedef"],
    srcs = [
        "diff_rotation_matrix.cc",
    ],
    hdrs = [
        "diff_rotation_matrix.h",
    ],
    deps = [
        ":derivatives",
        ":diff_object",
        "//common:essential",
        "//common:unused",
        "//math:autodiff",
        "//math:gradient",
    ],
)

drake_cc_googletest(
    name = "diff_matrix3_test",
    # The clang compiler complains about unused typedefs (using statements
    # really) in MultiplyOperation. Reported bugs with ids 24883 and 33298 at
    # https://bugs.llvm.org/
    clang_copts = ["-Wno-unused-local-typedef"],
    deps = [
        ":diffobj",
        "//common/test_utilities",
        "//math:autodiff",
        "//math:gradient",
    ],
)

add_lint_tests()
