#- * - python - * -
load("//tools/lint:lint.bzl", "add_lint_tests")
load(
    "//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
    "drake_cc_binary",
)

package(
    default_visibility = ["//visibility:public"],
)

drake_cc_binary(
    name = "joints_pool_experiment",
    srcs = [
        "joints_pool_experiment.cc",
    ],
    deps = [
        "//common:essential",
        "//common:nice_type_name",
    ],
)

add_lint_tests()
