# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = ["//visibility:public"],
)

drake_cc_library(
    name = "fischer_burmeister_solver",
    srcs = ["fischer_burmeister_solver.cc"],
    hdrs = ["fischer_burmeister_solver.h"],
    copts = ["-Wno-error=unused-parameter", "-Wno-error=unused-variable"],
    deps = [
        "//common:default_scalars",
        "//common:extract_double",
    ],
)

drake_cc_library(
    name = "scratch_workspace",
    srcs = ["scratch_workspace.cc"],
    hdrs = ["scratch_workspace.h"],
    copts = ["-Wno-error=unused-parameter", "-Wno-error=unused-variable"],
    deps = [
        "//common:default_scalars",
    ],
)

drake_cc_googletest(
    name = "fischer_burmeister_solver_test",
    copts = ["-Wno-error=unused-parameter", "-Wno-error=unused-variable"],
    data = [
        "test/particle.sdf"],
    deps = [
        ":fischer_burmeister_solver",
        "//multibody/plant",
        "//multibody/parsing",
        "//common:find_resource",
        "//common/test_utilities:eigen_matrix_compare",
        "//common/test_utilities:expect_no_throw",
        "//geometry:geometry_visualization",
        "//systems/framework:diagram",
        "//systems/framework:diagram_builder",
        "//systems/lcm",
    ],
)

drake_cc_googletest(
    name = "scratch_workspace_test",
    copts = ["-Wno-error=unused-parameter", "-Wno-error=unused-variable"],
    deps = [
        ":scratch_workspace",
    ],
)

add_lint_tests()
