# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = ["//visibility:public"],
)

drake_cc_library(
    name = "contact_solver",
    srcs = [],
    hdrs = ["contact_solver.h"],
    copts = ["-Wno-error=unused-parameter", "-Wno-error=unused-variable"],
    deps = [
        "//common:default_scalars",
    ],
)

drake_cc_library(
    name = "fischer_burmeister_solver",
    srcs = ["fischer_burmeister_solver.cc"],
    hdrs = ["fischer_burmeister_solver.h"],
    copts = ["-Wno-error=unused-parameter", "-Wno-error=unused-variable"],
    deps = [
        ":contact_solver",
        ":point_contact_data",
        ":scratch_workspace",
        ":system_dynamics_data",
        "//common:default_scalars",
        "//common:extract_double",
    ],
)

drake_cc_library(
    name = "linear_operator",
    srcs = ["linear_operator.cc"],
    hdrs = ["linear_operator.h"],
    deps = [
        "//common:default_scalars",
    ],
)

drake_cc_library(
    name = "sparse_linear_operator",
    srcs = ["sparse_linear_operator.cc"],
    hdrs = ["sparse_linear_operator.h"],
    deps = [
        ":linear_operator",
        "//common:default_scalars",
    ],
)

drake_cc_library(
    name = "scratch_workspace",
    srcs = ["scratch_workspace.cc"],
    hdrs = ["scratch_workspace.h"],
    copts = ["-Wno-error=unused-parameter", "-Wno-error=unused-variable"],
    deps = [
        "//common:default_scalars",
        "//common:nice_type_name",
    ],
)

drake_cc_library(
    name = "system_dynamics_data",
    srcs = ["system_dynamics_data.cc"],
    hdrs = ["system_dynamics_data.h"],
    copts = ["-Wno-error=unused-parameter", "-Wno-error=unused-variable"],
    deps = [
        "//common:default_scalars",
    ],
)

drake_cc_library(
    name = "point_contact_data",
    srcs = [],
    hdrs = ["point_contact_data.h"],
    copts = ["-Wno-error=unused-parameter", "-Wno-error=unused-variable"],
    deps = [
        "//common:default_scalars",
    ],
)

drake_cc_googletest(
    name = "fischer_burmeister_solver_test",
    copts = ["-Wno-error=unused-parameter", "-Wno-error=unused-variable"],
    data = [
        "test/particle.sdf"],
    deps = [
        ":fischer_burmeister_solver",
        "//multibody/plant",
        "//multibody/parsing",
        "//common:find_resource",
        "//common/test_utilities:eigen_matrix_compare",
        "//common/test_utilities:expect_no_throw",
        "//geometry:geometry_visualization",
        "//systems/framework:diagram",
        "//systems/framework:diagram_builder",
        "//systems/lcm",
    ],
)

drake_cc_googletest(
    name = "scratch_workspace_test",
    copts = ["-Wno-error=unused-parameter", "-Wno-error=unused-variable"],
    deps = [
        ":scratch_workspace",
    ],
)

drake_cc_googletest(
    name = "sparse_linear_operator_test",
    deps = [
        ":sparse_linear_operator",
        "//common/test_utilities:eigen_matrix_compare",
        "//common/test_utilities:expect_no_throw",
    ],
)

drake_cc_googletest(
    name = "eigen_matrix_free_test",
    copts = ["-Wno-error=unused-parameter", "-Wno-error=unused-variable"],
    deps = [],
)

drake_cc_googletest(
    name = "sparse_matrix_operations_test",
    copts = ["-Wno-error=unused-parameter", "-Wno-error=unused-variable"],
    deps = ["//common:essential",],
)

add_lint_tests()
