# -*- python -*-

load(
    "//tools:drake.bzl",
    "drake_cc_library",
    "drake_cc_binary",
    "drake_cc_googletest",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_binary(
    name = "controlled_kuka_demo",
    srcs = ["controlled_kuka_demo.cc"],
    add_test_rule = 1,
    data = [
        "//examples/kuka_iiwa_arm:models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//examples/kuka_iiwa_arm:iiwa_common",
        "//geometry:geometry_visualization",
        "//lcm",
        "//manipulation/util:sim_diagram_builder",
        "//multibody/multibody_tree/multibody_plant",
        "//multibody/multibody_tree/parsing:multibody_plant_sdf_parser",
        "//systems/analysis:simulator",
        "//systems/controllers:inverse_dynamics_controller",
        "//systems/lcm:lcm_pubsub_system",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:trajectory_source",
        "//systems/rendering:pose_bundle_to_draw_message",
        "@gflags",
    ],
)

add_lint_tests()
