# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/install:install_data.bzl", "install_data")
load(
    "@drake//tools/vector_gen:vector_gen.bzl",
    "drake_cc_vector_gen_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

drake_cc_binary(
    name = "load_model",
    srcs = ["load_model.cc"],
    data = ["double_pendulum.urdf"],
    deps = [
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//multibody/parsing",
        "//multibody/plant",
        "@gflags",
    ],
)

install_data()

add_lint_tests()
