# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_binary(
    name = "passive_simulation",
    srcs = ["passive_simulation.cc"],
    add_test_rule = 1,
    test_rule_args = ["--target_realtime_rate=0.0"],
    deps = [
        "//geometry:geometry_visualization",
        "//multibody/benchmarks/pendulum",
        "//systems/analysis:implicit_euler_integrator",
        "//systems/analysis:runge_kutta3_integrator",
        "//systems/analysis:semi_explicit_euler_integrator",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/primitives:constant_vector_source",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "trajectory_optimization_simulation",
    srcs = ["trajectory_optimization_simulation.cc"],
    add_test_rule = 1,
    test_rule_args = ["--target_realtime_rate=0.0"],
    # Non-deterministic IPOPT-related failures on macOS, see #10276.
    test_rule_flaky = 1,
    deps = [
        "//multibody/benchmarks/pendulum",
        "//common:is_approx_equal_abstol",
        "//geometry:geometry_visualization",
        "//solvers:solve",
        "//systems/analysis:simulator",
        "//systems/controllers:pid_controlled_system",
        "//systems/framework:diagram",
        "//systems/primitives:trajectory_source",
        "//systems/trajectory_optimization:direct_collocation",
        "@gflags",
    ],
)

add_lint_tests()
