# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_binary(
    name = "push_box",
    srcs = [
        "push_box.cc",
    ],
    data = [":push_box.sdf"],
    deps = [
        "//multibody/plant:contact_results_to_lcm",
        "//systems/framework:diagram",
        "//common:add_text_logging_gflags",
        "//common:find_resource",
        "//geometry:geometry_visualization",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/contact_solvers:mp_convex_solver",
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/analysis:simulator_print_stats",
        "@fmt",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "conveyor_belt",
    srcs = [
        "conveyor_belt.cc",
    ],
    data = [":conveyor_belt.sdf"],
    deps = [
        "//multibody/plant:contact_results_to_lcm",
        "//systems/framework:diagram",
        "//common:add_text_logging_gflags",
        "//common:find_resource",
        "//geometry:geometry_visualization",
        "//geometry:drake_visualizer",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/contact_solvers:mp_convex_solver",
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/analysis:simulator_print_stats",
        "@fmt",
        "@gflags",
    ],
)

add_lint_tests()
